- minor change on package.json file

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "temporal",
   "version": "1.0.0",
-  "description": "Basic CMS",
+  "description": "Basic CMS system",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
